LibraryProject/Common/GameKitInitializer.h

//
//  GameKitInitializer.h
//

// MatchDelegate
typedef void (*MatchDelegate_match_player_didChangeConnectionState)(void* ptr, void* match, void* player, long state);
typedef void (*MatchDelegate_match_didFailWithError)(void* ptr, void* match, void* error);
typedef void (*MatchDelegate_match_didReceiveData_fromRemotePlayer)(void* ptr, const void* data, long dataLength, const char* player);
typedef void (*MatchDelegate_match_didReceiveData_forRecipient_fromRemotePlayer)(void* ptr, const void* data, long dataLength, const char* recipient, const char* player);
typedef bool (*MatchDelegate_match_shouldReinviteDisconnectedPlayer)(void* ptr, void* match, void* player);
// MatchmakerViewControllerDelegate
typedef void (*MatchmakerViewControllerDelegate_matchmakerViewController_didFindMatch)(void* ptr, void* viewController, void* match);
typedef void (*MatchmakerViewControllerDelegate_matchmakerViewControllerWasCancelled)(void* ptr, void* viewController);
typedef void (*MatchmakerViewControllerDelegate_matchmakerViewController_didFailWithError)(void* ptr, void* viewController, void* error);
typedef void (*MatchmakerViewControllerDelegate_matchmakerViewController_hostedPlayerDidAccept)(void* ptr, void* viewController, void* player);
typedef void (*MatchmakerViewControllerDelegate_matchmakerViewController_didFindHostedPlayers)(void* ptr, void* viewController, void* players[],
	long playersCount);
// LocalPlayerListener
typedef void (*LocalPlayerListener_player_didAcceptInvite)(void* ptr, void* player, void* invite);
typedef void (*LocalPlayerListener_player_didReceiveChallenge)(void* ptr, void* player, void* challenge);
typedef void (*LocalPlayerListener_player_wantsToPlayChallenge)(void* ptr, void* player, void* challenge);
typedef void (*LocalPlayerListener_player_issuedChallengeWasCompleted_byFriend)(void* ptr, void* player, void* challenge, void* friendPlayer);
typedef void (*LocalPlayerListener_player_matchEnded)(void* ptr, void* player, void* match);
typedef void (*LocalPlayerListener_player_didRequestMatchWithRecipients)(void* ptr, void* player, void* recipientPlayers[],
	long recipientPlayersCount);
typedef void (*LocalPlayerListener_player_didCompleteChallenge_issuedByFriend)(void* ptr, void* player, void* challenge, void* friendPlayer);
typedef void (*LocalPlayerListener_player_receivedExchangeCancellation_forMatch)(void* ptr, void* player, void* exchange, void* match);
typedef void (*LocalPlayerListener_player_receivedExchangeReplies_forCompletedExchange_forMatch)(void* ptr, void* player, void* replies[],
	long repliesCount, void* exchange, void* match);
typedef void (*LocalPlayerListener_player_receivedExchangeRequest_forMatch)(void* ptr, void* player, void* exchange, void* match);
typedef void (*LocalPlayerListener_player_didRequestMatchWithOtherPlayers)(void* ptr, void* player, void* playersToInvite[],
	long playersToInviteCount);
typedef void (*LocalPlayerListener_player_receivedTurnEventForMatch_didBecomeActive)(void* ptr, void* player, void* match, bool didBecomeActive);
typedef void (*LocalPlayerListener_player_wantsToQuitMatch)(void* ptr, void* player, void* match);
// ChallengeListener
typedef void (*ChallengeListener_player_didReceiveChallenge)(void* ptr, void* player, void* challenge);
typedef void (*ChallengeListener_player_wantsToPlayChallenge)(void* ptr, void* player, void* challenge);
typedef void (*ChallengeListener_player_didCompleteChallenge_issuedByFriend)(void* ptr, void* player, void* challenge, void* friendPlayer);
typedef void (*ChallengeListener_player_issuedChallengeWasCompleted_byFriend)(void* ptr, void* player, void* challenge, void* friendPlayer);
// TurnBasedEventListener
typedef void (*TurnBasedEventListener_player_receivedExchangeCancellation_forMatch)(void* ptr, void* player, void* exchange, void* match);
typedef void (*TurnBasedEventListener_player_receivedExchangeReplies_forCompletedExchange_forMatch)(void* ptr, void* player, void* replies[],
	long repliesCount, void* exchange, void* match);
typedef void (*TurnBasedEventListener_player_receivedExchangeRequest_forMatch)(void* ptr, void* player, void* exchange, void* match);
typedef void (*TurnBasedEventListener_player_didRequestMatchWithOtherPlayers)(void* ptr, void* player, void* playersToInvite[],
	long playersToInviteCount);
typedef void (*TurnBasedEventListener_player_matchEnded)(void* ptr, void* player, void* match);
typedef void (*TurnBasedEventListener_player_receivedTurnEventForMatch_didBecomeActive)(void* ptr, void* player, void* match, bool didBecomeActive);
typedef void (*TurnBasedEventListener_player_wantsToQuitMatch)(void* ptr, void* player, void* match);
// GKTurnBasedMatchmakerViewControllerDelegate
typedef void (*GKTurnBasedMatchmakerViewControllerDelegate_turnBasedMatchmakerViewControllerWasCancelled)(void* ptr, void* viewController);
typedef void (*GKTurnBasedMatchmakerViewControllerDelegate_turnBasedMatchmakerViewController_didFailWithError)(void* ptr, void* viewController, void* error);